--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
-  app:
-    container_name: app
+  api:
+    container_name: api
     build:
       context: .
       dockerfile: Dockerfile
